# 3333

./: .gitignore  3333-server.py  3333.css  3333.html  3333.js  Makefile  common-consts.py  consts.py  debug.js  footer-all.html  help.html  m3333-0.html  m3333.css  m3333.html  m3333.js  select-page.html  watchdog.py
client/src/: App.svelte  Canvas.svelte  Club.svelte  Dialog.svelte  Help.svelte  IdInput.svelte  Modal.svelte  NavBar.svelte  Players.svelte  Table.svelte  app.css  canvas.js  canvas.ts  consts.ts  hint.ts  table_data.ts  wscon.ts
qlient/: CMakeLists.txt  Makefile  client.cpp  client.h  club.cpp  club.h  common.h  dlgtbl.cpp  dlgtbl.h  drawarea.cpp  drawarea.h  game.cpp  game.h  golden.cpp  golden.h  icondata.cpp  icondata.h  jointbl.cpp  jointbl.h  main.cpp  newtbl.cpp  newtbl.h  player.cpp  player.h  players.cpp  players.h  svglabel.cpp  svglabel.h  table.cpp  table.h  ui.cpp  ui.h  utils.cpp  utils.h
server/: Makefile  beast.h  card.cc  card.h  http_session.cc  http_session.h  logger.cc  logger.h  main.cc  net.h  net_utils.cc  net_utils.h  player.cc  player.h  server.cc  server.h  ssl_ws.h  table.cc  table.h  utils.cc  utils.h  ws_session.cc  ws_session.h
tools/: gen_cs_consts.py
